[gd_scene load_steps=18 format=2]

[ext_resource path="res://source/scenes/levels/firetruck.gd" type="Script" id=1]
[ext_resource path="res://source/scenes/actors/player_car.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/road_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/road_outline.png" type="Texture" id=4]
[ext_resource path="res://source/utils/move_parallax_layer.gd" type="Script" id=11]
[ext_resource path="res://source/scenes/props/Sun.tscn" type="PackedScene" id=14]
[ext_resource path="res://source/scenes/props/Cloud2.tscn" type="PackedScene" id=16]
[ext_resource path="res://source/scenes/actors/npc/cat.tscn" type="PackedScene" id=20]
[ext_resource path="res://source/scenes/menu/pause-menu.tscn" type="PackedScene" id=21]
[ext_resource path="res://source/utils/enter_tween.gd" type="Script" id=22]
[ext_resource path="res://source/scenes/props/Cloud3.tscn" type="PackedScene" id=23]
[ext_resource path="res://source/scenes/props/Cloud4.tscn" type="PackedScene" id=24]
[ext_resource path="res://assets/audio/Bike Rides - The Green Orbs.mp3" type="AudioStream" id=25]
[ext_resource path="res://source/scenes/actors/npc/pedestrian.tscn" type="PackedScene" id=33]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.324713, 0.462644, 0.62069, 1 )
colors = PoolColorArray( 0.407843, 0.760784, 0.827451, 1, 0.407843, 0.760784, 0.827451, 1, 0.601415, 0.805903, 0.750313, 1, 0.947912, 0.937853, 0.882309, 1, 0.94902, 0.941176, 0.898039, 1 )

[sub_resource type="GradientTexture2D" id=12]
gradient = SubResource( 11 )
width = 1400
height = 800
fill_to = Vector2( 0, 1 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 2.0
glow_strength = 1.01
glow_bicubic_upscale = true

[node name="FiretruckLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/Sky"]
position = Vector2( -693, -233 )
texture = SubResource( 12 )
centered = false

[node name="MoonSun" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0.98 )
motion_mirroring = Vector2( 1400, 0 )

[node name="Sun" parent="ParallaxBackground/MoonSun" instance=ExtResource( 14 )]
position = Vector2( 300, 0 )

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
pause_mode = 2
motion_scale = Vector2( 0.1, 0.95 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 11 )

[node name="Pivot" type="Node2D" parent="ParallaxBackground/Clouds"]

[node name="Cloud5" parent="ParallaxBackground/Clouds/Pivot" instance=ExtResource( 24 )]
position = Vector2( 685, -70 )
scale = Vector2( 0.7, 0.7 )

[node name="Cloud3" parent="ParallaxBackground/Clouds/Pivot" instance=ExtResource( 23 )]
position = Vector2( 67, -15 )
scale = Vector2( 0.7, 0.7 )

[node name="Clouds2" type="ParallaxLayer" parent="ParallaxBackground"]
pause_mode = 2
motion_scale = Vector2( 0.1, 0.95 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 11 )
speed = 30.0

[node name="Pivot" type="Node2D" parent="ParallaxBackground/Clouds2"]

[node name="Cloud5" parent="ParallaxBackground/Clouds2/Pivot" instance=ExtResource( 16 )]
position = Vector2( 288, -110 )
scale = Vector2( 0.7, 0.7 )

[node name="Cloud3" parent="ParallaxBackground/Clouds2/Pivot" instance=ExtResource( 23 )]
position = Vector2( 1040, -95 )
scale = Vector2( 0.7, 0.7 )

[node name="RoadParallax" type="ParallaxBackground" parent="."]
layer = -1

[node name="Road" type="ParallaxLayer" parent="RoadParallax"]
position = Vector2( -4, -4 )
motion_mirroring = Vector2( 1510, 0 )

[node name="Road1" type="Node2D" parent="RoadParallax/Road"]
position = Vector2( 0, 450 )
scale = Vector2( 1.2, 1 )

[node name="RoadFill" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 154, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="RoadFill2" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 1094.5, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="RoadFill3" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 788.5, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="RoadFill4" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 472.5, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="RoadOutline" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 154, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="RoadOutline2" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 1100, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="RoadOutline3" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 785, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="RoadOutline4" type="Sprite" parent="RoadParallax/Road/Road1"]
light_mask = 5
position = Vector2( 469, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Actors" type="YSort" parent="."]

[node name="Pedestrians" type="YSort" parent="Actors"]

[node name="Pedestrian" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 402, 316 )
can_discover = false

[node name="Pedestrian2" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 751, 365 )
can_discover = false

[node name="Pedestrian3" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( -988, 553 )
can_discover = false

[node name="Pedestrian4" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 1162, 353 )
can_discover = false

[node name="Pedestrian5" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 1692, 353 )
can_discover = false

[node name="Pedestrian7" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 1548, 606 )
can_discover = false

[node name="Pedestrian8" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( 747, 576 )
can_discover = false

[node name="Pedestrian9" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( -397, 603 )
can_discover = false

[node name="Pedestrian10" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( -596, 348 )
can_discover = false

[node name="Pedestrian6" parent="Actors/Pedestrians" instance=ExtResource( 33 )]
position = Vector2( -1571, 344 )
can_discover = false

[node name="Player" parent="Actors" instance=ExtResource( 2 )]
position = Vector2( 0, 440 )
camera_y_offset = -200.0

[node name="CatsToRescue" type="YSort" parent="Actors"]

[node name="Cat" parent="Actors/CatsToRescue" instance=ExtResource( 20 )]
position = Vector2( 297, 335 )

[node name="Cat2" parent="Actors/CatsToRescue" instance=ExtResource( 20 )]
position = Vector2( 1614, 380 )

[node name="Cat3" parent="Actors/CatsToRescue" instance=ExtResource( 20 )]
position = Vector2( -542, 332 )

[node name="Cat4" parent="Actors/CatsToRescue" instance=ExtResource( 20 )]
position = Vector2( -1355, 372 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="PauseParallax" parent="." instance=ExtResource( 21 )]

[node name="EnterTweener" type="Node" parent="."]
script = ExtResource( 22 )
object_time_offset = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 25 )
autoplay = true
bus = "Background"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CarSpawnTimer" type="Timer" parent="."]
wait_time = 5.61
autostart = true

[connection signal="timeout" from="CarSpawnTimer" to="." method="_on_CarSpawnTimer_timeout"]
